--- a/vc-web/vc-web-front/src/main/resources/public/base/dict/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/base/dict/index_query.html
@@ -50,8 +50,10 @@
 			</dl>
 <dl cond="createDate" style="display:none;">
 				<dt>创建时间</dt>
-				<dd  >
-					<input  name="createDateEquals" class="form-control layer-date laydate-icon" placeholder="" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
+				<dd class="timergroup" >
+					<input  name="createDateStart"  placeholder="开始时间" class="form-control timegroupinput" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
+                    <label class="timegrouplabel">-</label>
+                    <input  name="createDateEnd" placeholder="结束时间" class="form-control timegroupinput" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
 				</dd>
 			</dl>
 <dl cond="updateBy" style="display:none;">
@@ -62,8 +64,10 @@
 			</dl>
 <dl cond="updateDate" style="display:none;">
 				<dt>更新时间</dt>
-				<dd  >
-					<input  name="updateDateEquals" class="form-control layer-date laydate-icon" placeholder="" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
+				<dd class="timergroup" >
+					<input  name="updateDateStart"  placeholder="开始时间" class="form-control timegroupinput" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
+                    <label class="timegrouplabel">-</label>
+                    <input  name="updateDateEnd" placeholder="结束时间" class="form-control timegroupinput" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
 				</dd>
 			</dl>
 <dl cond="remarks" style="display:none;">
