--- a/vc-web/vc-web-front/src/main/resources/public/monitor/can/detail.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/can/detail.html
@@ -86,7 +86,7 @@
 				<dl  >
 					<dt>状态：</dt>
 					<dd>
-					<input name="cscStatus" placeholder="请输入状态" class="form-control" >
+					<input name="cscStatus" placeholder="请输入关键字" class="form-control searchinput"  dataWhere="status"  dataUrl="/base/dict/query">
 					</dd>
 				</dl>
 		</div>
