--- a/vc-web/vc-web-front/src/main/resources/public/monitor/state/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/state/index_list2.html
@@ -42,7 +42,7 @@
 				        <li><label><input value="cssOil" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >燃油量:</label></li>
 				        <li><label><input value="cssPower" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >小电瓶电量</label></li>
 				        <li><label><input value="cssEvBattery" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >SOC</label></li>
-				        <li><label><input value="cssCharging" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >充电状态</label></li>
+				        <li><label><input value="cssChargingText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >充电状态</label></li>
 				        <li><label><input value="cssFuelMileage"  type="checkbox" onclick='showHideColumn(this, this.value);' >订单油里程</label></li>
 				        <li><label><input value="cssElectricMileage"  type="checkbox" onclick='showHideColumn(this, this.value);' >订单电里程</label></li>
 				        <li><label><input value="cssEndurance" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >续航里程</label></li>
@@ -152,7 +152,7 @@
 	  		,{field: "cssOil", title: "燃油量:", width: 110, sort:true}
 	  		,{field: "cssPower", title: "小电瓶电量", width: 110, sort:true}
 	  		,{field: "cssEvBattery", title: "SOC", width: 110, sort:true}
-	  		,{field: "cssCharging", title: "充电状态", width: 110, sort:true}
+	  		,{field: "cssChargingText", title: "充电状态", width: 110, sort:true}
 	  		,{field: "cssEndurance", title: "续航里程", width: 110, sort:true}
 	  		,{field: "cssTemperature", title: "温度", width: 110, sort:true}
 	  		,{field: "cssCsq", title: "CSQ", width: 110, sort:true}
