1、rule-engine-srv 非prod环境下，添加定时更新mapping关系

--- a/vc-web/vc-web-front/src/main/resources/public/base/access/detail.html
+++ b/vc-web/vc-web-front/src/main/resources/public/base/access/detail.html
@@ -44,6 +44,36 @@
 					</dd>
 				</dl>
 				<dl  >
+					<dt>转发指令结果：</dt>
+					<dd>
+					<select class="form-control m-b" name="shTransformRemote"  >
+                         <option></option>
+                         <option value="1">转发</option>
+                         <option value="0">不转发</option>
+                    </select>
+					</dd>
+				</dl>
+				<dl  >
+					<dt>转发状态：</dt>
+					<dd>
+					<select class="form-control m-b" name="shTransformStatus"  >
+                         <option></option>
+                         <option value="1">转发</option>
+                         <option value="0">不转发</option>
+                    </select>
+					</dd>
+				</dl>
+				<dl  >
+					<dt>转发CAN：</dt>
+					<dd>
+					<select class="form-control m-b" name="shTransformCan"  >
+                         <option></option>
+                         <option value="1">转发</option>
+                         <option value="0">不转发</option>
+                    </select>
+					</dd>
+				</dl>
+				<dl  >
 					<dt>添加时间：</dt>
 					<dd>
 					<input name="shAddTime" class="form-control layer-date laydate-icon" placeholder="请选择" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
