--- a/vc-web/vc-web-front/src/main/resources/static/index.html
+++ b/vc-web/vc-web-front/src/main/resources/static/index.html
@@ -115,6 +115,28 @@
 								<li>
 									<a class="J_menuItem" href="monitor/can/index.html">车辆实时CAN信息</a>
 								</li>
+								<li>
+									<a class="J_menuItem" href="###">车辆历史数据</a>
+								</li>
+								<li>
+									<a class="J_menuItem" href="###">车辆历史CAN数据</a>
+								</li>
+							</ul>
+						</li>
+
+						<li>
+							<a href="#">
+								<i class="fa fa-home"></i>
+								<span class="nav-label">新能源车监控管理</span>
+								<span class="fa arrow"></span>
+							</a>
+							<ul class="nav nav-second-level">
+								<li>
+									<a class="J_menuItem" href="###">新能源车实时数据</a>
+								</li>
+								<li>
+									<a class="J_menuItem" href="###">新能源车历史数据</a>
+								</li>
 							</ul>
 						</li>
 					</ul>
