--- a/vc-web/vc-web-front/src/main/resources/public/base/access/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/base/access/index_query.html
@@ -30,6 +30,36 @@
 					<input  name="shTopicEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
+<dl cond="shTransformRemote" style="display:none;">
+				<dt>转发指令结果</dt>
+				<dd  >
+					<select class="form-control"  name="shTransformRemoteEquals"  >
+	                    <option></option>
+                         <option value="1">转发</option>
+                         <option value="0">不转发</option>
+                    </select>
+				</dd>
+			</dl>
+<dl cond="shTransformStatus" style="display:none;">
+				<dt>转发状态</dt>
+				<dd  >
+					<select class="form-control"  name="shTransformStatusEquals"  >
+	                    <option></option>
+                         <option value="1">转发</option>
+                         <option value="0">不转发</option>
+                    </select>
+				</dd>
+			</dl>
+<dl cond="shTransformCan" style="display:none;">
+				<dt>转发CAN</dt>
+				<dd  >
+					<select class="form-control"  name="shTransformCanEquals"  >
+	                    <option></option>
+                         <option value="1">转发</option>
+                         <option value="0">不转发</option>
+                    </select>
+				</dd>
+			</dl>
 <dl cond="shAddTime" style="display:none;">
 				<dt>添加时间</dt>
 				<dd class="timergroup" >
@@ -71,6 +101,9 @@
 			        <li><label><input cond="shName" value="shName" checked="checked" type="checkbox" onclick='showHideCondition(this, this.value);' >接入商</label></li>
 			        <li><label><input cond="shKey" value="shKey" checked="checked" type="checkbox" onclick='showHideCondition(this, this.value);' >接入KEY</label></li>
 			        <li><label><input cond="shTopic" value="shTopic"  type="checkbox" onclick='showHideCondition(this, this.value);' >转发Topic</label></li>
+			        <li><label><input cond="shTransformRemote" value="shTransformRemoteText"  type="checkbox" onclick='showHideCondition(this, this.value);' >转发指令结果</label></li>
+			        <li><label><input cond="shTransformStatus" value="shTransformStatusText"  type="checkbox" onclick='showHideCondition(this, this.value);' >转发状态</label></li>
+			        <li><label><input cond="shTransformCan" value="shTransformCanText"  type="checkbox" onclick='showHideCondition(this, this.value);' >转发CAN</label></li>
 			        <li><label><input cond="shAddTime" value="shAddTime"  type="checkbox" onclick='showHideCondition(this, this.value);' >添加时间</label></li>
 			        <li><label><input cond="shUptTime" value="shUptTime"  type="checkbox" onclick='showHideCondition(this, this.value);' >更新时间</label></li>
 			        <li><label><input cond="shStatus" value="shStatusText"  type="checkbox" onclick='showHideCondition(this, this.value);' >状态</label></li>
