--- a/vc-web/vc-web-front/src/main/resources/static/index.html
+++ b/vc-web/vc-web-front/src/main/resources/static/index.html
@@ -113,6 +113,9 @@
 									<a class="J_menuItem" href="monitor/state/index.html">车辆实时状态信息</a>
 								</li>
 								<li>
+									<a class="J_menuItem" href="monitor/map/vehiclemonitor.html">车辆地图监控</a>
+								</li>
+								<li>
 									<a class="J_menuItem" href="monitor/can/index.html">车辆实时CAN信息</a>
 								</li>
 								<li>
@@ -120,6 +123,9 @@
 								</li>
 								<li>
 									<a class="J_menuItem" href="###">车辆历史CAN数据</a>
+								</li>
+								<li>
+									<a class="J_menuItem" href="monitor/map/history.html">车辆历史轨迹</a>
 								</li>
 							</ul>
 						</li>
